Modify Mulukhiyah link to open new tab

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/mulukhiyah.html">Mulukhiyah</a>
+        <a href="recipes/mulukhiyah.html" target="_blank" rel="noopener noreferrer">Mulukhiyah</a>
     </body>
 </html>
