--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
 
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/mulukhiyah.html" target="_blank" rel="noopener noreferrer">Mulukhiyah</a>
+
+        <p>Welcome to <strong>Odin Recipes</strong>! Click on whichever dish to see the recipe.</p>
+
+        <h2>Dishes</h2>
+
+        <ul>
+            <li><a href="recipes/mulukhiyah.html" target="_blank" rel="noopener noreferrer">Mulukhiyah</a></li>
+            <li><a href="recipes/lasagna.html" target="_blank" rel="noopener noreferrer">Lasagna</a></li>
+            <li><a href="recipes/stirfry.html" target="_blank" rel="noopener noreferrer">Stir Fry</a></li>
+        </ul>
+           
     </body>
 </html>
