Fix emphasis on Italian

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -12,7 +12,7 @@
 
         <h2>Description</h2>
 
-        <p><strong>Lasagna</strong> is a world-famous <en>Italian</en> dish that has found its way 
+        <p><strong>Lasagna</strong> is a world-famous <em>Italian</em> dish that has found its way 
             into kitchens across the globe due to its rich, hearty flavor. Lasagna consists
              of layers of pasta, cheese, sauce, and either meat or vegetables. It is a baked 
              dish that brings together the warmth and comfort of Italian cuisine in one delicious meal.</p>
